tests: dist the yaml test files

--- a/tests/Makefile.am.inc
+++ b/tests/Makefile.am.inc
@@ -18,11 +18,14 @@ dist_installed_test_data = \
 	tests/libtest.sh \
 	tests/org.test.Hello.png \
 	tests/test.json \
+	tests/test.yaml \
 	tests/test-runtime.json \
 	tests/module1.json \
+	tests/module1.yaml \
 	tests/data1 \
 	tests/data1.patch \
 	tests/module2.json \
+	tests/module2.yaml \
 	tests/data2 \
 	tests/data2.patch \
 	tests/session.conf.in \
