--- a/configure.ac
+++ b/configure.ac
@@ -35,6 +35,7 @@ LIBGLNX_CONFIGURE
 
 AC_PROG_CC
 AM_PROG_CC_C_O
+AC_PROG_CC_STDC
 AC_DISABLE_STATIC
 
 AC_CHECK_PROG([FLATPAK], [flatpak], [flatpak], [false])
